--- a/src/app/componentes/bonificacao/bonificacao-mentor/bonificacao-mentor.component.html
+++ b/src/app/componentes/bonificacao/bonificacao-mentor/bonificacao-mentor.component.html
@@ -3,7 +3,7 @@
   <mat-icon>keyboard_backspace</mat-icon>
 </button>
 <div class="titulo">
-  <h1>Bonificação do(a) Mentor(a) <strong> {{nomeMentor}}</strong></h1>
+  <h1>Bonificação dx Mentorx <strong> {{nomeMentor}}</strong></h1>
   <button mat-raised-button color="accent" routerLink="cadastrar/" class="mb-2" style="color: white;">Cadastrar bonificação</button>
 </div>
 <div class="container w-50"  style="height: 400px; overflow: auto;">
