--- a/src/app/componentes/funcionario/cadastrar-func/cadastrar-func.component.html
+++ b/src/app/componentes/funcionario/cadastrar-func/cadastrar-func.component.html
@@ -25,7 +25,7 @@
       </div>
       <hr>
       <div class="mb-3">
-        <label class="form-label">Foto do(a) Funcionário(a)</label>
+        <label class="form-label">Foto dx Funcionárix</label>
         <input type="file" class="form-control" [disabled]="!funcCadastrado" (change)="importarImg($event)">
       </div>
     </form>
