--- a/src/app/componentes/funcionario/funcionarios/funcionarios.component.scss
+++ b/src/app/componentes/funcionario/funcionarios/funcionarios.component.scss
@@ -71,17 +71,17 @@ td {
   text-align: left;
 }
 
-.mat-column-id {
-  font-weight: 900;
-}
+// .mat-column-id {
+//   font-weight: 900;
+// }
 
-.mat-column-id_cargo {
-  width: 14%;
-}
+// .mat-column-id_cargo {
+//   width: 14%;
+// }
 
-.mat-column-cargo {
-  width: 20%;
-}
+// .mat-column-cargo {
+//   width: 20%;
+// }
 
 .table-container {
   width: 80%;
