--- a/src/app/componentes/mentor/mentores-cargo/mentores-cargo.component.scss
+++ b/src/app/componentes/mentor/mentores-cargo/mentores-cargo.component.scss
@@ -72,7 +72,7 @@ button.bot-card {
   color: #f57c00;
 }
 
-button.bot-card::before {
+button.bot-card:enabled:before {
   content: "";
   width: 0;
   height: 300%;
@@ -94,6 +94,12 @@ button.bot-card:hover {
   color: #fff;
 }
 
+button.bot-card:disabled {
+  background-color: lightgray;
+  color: gray;
+  border: gray;
+}
+
 select {
   -moz-appearance: none;
   /* -webkit-appearance: none;
@@ -113,8 +119,4 @@ select {
 
 select:focus {
   background: transparent;
-}
-
-#card-alteracao {
-  border: 2px solid darkorange;
 }
