--- a/src/app/componentes/bonificacao/editar-bonificacao/editar-bonificacao.component.html
+++ b/src/app/componentes/bonificacao/editar-bonificacao/editar-bonificacao.component.html
@@ -17,12 +17,12 @@
       <mat-form-field class="example-full-width" appearance="fill">
         <mat-label>Data de Pagamento</mat-label>
         <input type="date" matInput [(ngModel)]="bonificacao.bo_dataPagamento" name="bo_dataPagamento"
-          formControlName="bo_dataPagamento">
+          formControlName="bo_dataPagamento" [readonly]="bonificacao.bo_status == 'CANCELADO' || bonificacao.bo_status == 'PAGO'">
       </mat-form-field>
       <mat-form-field class="example-full-width" appearance="fill">
         <mat-label>Valor</mat-label>
         <input type="text" matInput [(ngModel)]="bonificacao.bo_valor" name="bo_valor"
-          formControlName="bo_valor">
+          formControlName="bo_valor" currencyMask [options]="{ prefix: 'R$ ', thousands: '.', decimal: ',', align: 'left'}" [readonly]="bonificacao.bo_status == 'CANCELADO' || bonificacao.bo_status == 'PAGO'">
       </mat-form-field>
       <mat-form-field class="example-full-width" appearance="fill">
         <mat-label>Status</mat-label>
