--- a/src/app/componentes/cargo/excluir-cargos/excluir-cargos.component.html
+++ b/src/app/componentes/cargo/excluir-cargos/excluir-cargos.component.html
@@ -24,7 +24,7 @@
         <button mat-raised-button color="accent" (click)="open(modalExcluir)" [disabled]="!form.valid">Excluir</button>
       </div>
 
-      <!-- Modal de confirmação para excluir turma -->
+      <!-- Modal de confirmação para excluir cargo -->
       <ng-template #modalExcluir let-modal>
         <div class="modal-header">
           <h4 class="modal-title" id="excluir">Aviso</h4>
@@ -33,7 +33,7 @@
           </button>
         </div>
         <div class="modal-body">
-          <p>Deseja realmente excluir #{{cargo.id_cargo}} {{cargo.car_nome}}?</p>
+          <p>Deseja realmente excluir <strong>#{{cargo.id_cargo}} {{cargo.car_nome}}</strong>?</p>
         </div>
         <div class="modal-footer">
           <button mat-raised-button type="button" (click)="modal.close('Save click')" class="mx-3">Cancelar</button>
