--- a/src/app/componentes/funcionario/funcionarios/funcionarios.component.html
+++ b/src/app/componentes/funcionario/funcionarios/funcionarios.component.html
@@ -2,7 +2,7 @@
 
 <img src="../../../../assets/funcionarios2.png" alt="" id="imagem" style="opacity: 65%;">
 <div style="text-align: center;" class="mt-5">
-  <h1><strong>Funcionários(as)</strong></h1>
+  <h1><strong>Funcionárixs</strong></h1>
   <h2 style="color: #8d6e63;">--- Atribuição de Cargos ---</h2>
 </div>
 <mat-form-field appearance="standard" class="busca">
@@ -31,6 +31,19 @@
       <th mat-header-cell *matHeaderCellDef mat-sort-header> <span class="mx-5">Cidade </span></th>
       <td mat-cell *matCellDef="let func"> <span class="mx-5">{{func.func_cidade}}</span> </td>
     </ng-container>
+    <!-- Coluna foto -->
+    <ng-container matColumnDef="foto">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> <span class="mx-5">Foto </span></th>
+      <td mat-cell *matCellDef="let func"> <button mat-button (click)="open(modalImg)">
+          <mat-icon>image</mat-icon>
+
+          <!-- Modal de foto -->
+          <ng-template #modalImg let-modal id="foto-modal">
+            <img src="../../../../{{func.func_foto}}" alt="">
+          </ng-template>
+
+        </button></td>
+    </ng-container>
     <!-- Coluna ID do cargo -->
     <ng-container matColumnDef="id_cargo">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> <span class="mx-5">ID Cargo </span></th>
@@ -45,9 +58,16 @@
     <ng-container matColumnDef="atribuir">
       <th mat-header-cell *matHeaderCellDef mat-sort-header> <span class="mx-4">Ações</span></th>
       <td mat-cell *matCellDef="let func">
-        <button mat-button routerLink="/atribuirCargo/{{func.id_funcionario}}/{{func.id_cargo}}" title="Atribuir Cargo" color="accent"><mat-icon >work</mat-icon></button>
-        <button mat-button routerLink="/funcionario/editar/{{func.id_funcionario}}/{{func.id_cargo}}" title="Editar"><mat-icon >edit</mat-icon></button>
-        <button mat-button routerLink="/funcionario/excluir/{{func.id_funcionario}}" title="Excluir" color="warn"><mat-icon >delete</mat-icon></button>
+        <button mat-button routerLink="atribuirCargo/{{func.id_funcionario}}/{{func.id_cargo}}" title="Atribuir Cargo"
+          color="accent">
+          <mat-icon>work</mat-icon>
+        </button>
+        <button mat-button routerLink="/funcionario/editar/{{func.id_funcionario}}/{{func.id_cargo}}" title="Editar">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-button routerLink="/funcionario/excluir/{{func.id_funcionario}}" title="Excluir" color="warn">
+          <mat-icon>delete</mat-icon>
+        </button>
       </td>
     </ng-container>
     <!-- Coluna ações -->
