--- a/src/app/componentes/mentor/atribuir-cargo-mentor/atribuir-cargo-mentor.component.html
+++ b/src/app/componentes/mentor/atribuir-cargo-mentor/atribuir-cargo-mentor.component.html
@@ -53,7 +53,7 @@
           <div class="card my-3">
             <h5 class="card-title">Deixar Mentor sem Cargo?</h5>
             <div class="card-body">
-              <button class="btn btn-secondary">Confirmar</button>
+              <button class="btn btn-secondary" (click)="deixarCargoSemMentor()">Confirmar</button>
             </div>
           </div>
 
